# GliDer

./: README.md  distil.py  eval_coco.py  get_data.sh  pyproject.toml  requirements.txt  test.py  train.py  train_coco.py
glider/: __init__.py  config.py  model.py  utils.py
glider/loss/: __init__.py  criterion.py  distilation_criterion.py  matcher.py
glider/modeling/: __init__.py  base.py  heads.py  layers.py  outputs.py  towers.py  vitdet.py
glider/owl/: __init__.py  config.py  model.py
glider/processing/: __init__.py  data_collator.py  processor.py
glider/training/: trainer.py
